index.css
h1{
    border: 1px;
    background-color: rgba(2, 0, 0, 0.849);
    color: white;
    text-align: center;
    font-family: Georgia, 'Times New Roman', Times, serif;
    padding-top: 1em;

}
h3{
    text-align: center;
    font-weight: 700;
    font-size: 30px;
    color: white;
    border: thin;
   
    
}

span{
    color: red;

}

ul{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: larger;
    padding-top: 25px;
    text-align: center;
    font-size: 20px;
    list-style-position: inside; 

}

li{
    text-align: center;
    font-size: 20px; 


}

p{
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 20px; 
}

.center {
   
    text-align: center;
    align-items: center;
    
    border:1px;
    padding-left: 25%;
  }
  body{
      background-color: rgb(36, 36, 36);
      width: 100%;
     overflow: auto;
     color: rgb(255, 255, 255);
  }
  #margin{
      margin: 0 10em;
  }
  .p2{
    text-align: center;
    font-family: Georgia, 'Times New Roman', Times, serif;
    font-size: 25px; 
  }
  #LED{
      align-items: center;
      text-align: center;
      padding-left: 25%;    
  }
  a:link{
    background-image: none;
    background-color: red;
    padding: 0px;
    
  }
  a:hover{
      background-color: whitesmoke;
      text-decoration: underline;
      
        }
   a:visited{
        
        font-family: sans-serif;
        }
        iframe{
            align-items: center;
            text-align: center;
            padding-left: 24%; 

        }
        .thunder{
            padding-right: 40pxpx;
        }

